# clair-dmg

./: CMakeLists.txt  CMakeSettings.json  README.md
include/: apu.h  apu_state.h  cpu.h  dma_state.h  fe_de_ex.h  game_display.h  hardware.h  hardware_def.h  hardware_registers.h  init.h  instructions.h  interrupt_handler.h  logging.h  master_clock.h  mbc_handler.h  memory.h  memory_bus.h  opcodes.h  ppu.h  ppu_state.h  sdl_data.h  system.h  system_state.h  timer_state.h
logs/: 2025-06-10.md  2025-06-11.md  2025-06-12.md  2025-06-14.md  overview.md
src/: acc_rot_instructions.c  apu.c  arithmetic_instructions.c  bitwise_instructions.c  call_jp_ret_instructions.c  cb_instructions.c  cpu.c  fe_de_ex.c  game_display.c  hardware.c  hardware_registers.c  inc_dec_instructions.c  init.c  interrupt_handler.c  load_instructions.c  logging.c  main.c  master_clock.c  mbc_handler.c  memory.c  memory_bus.c  misc_instructions.c  opcodes.c  ppu.c  ppu_helpers.c  sdl_data.c  system.c  system_state.c
tests/: cpu_tests.c
